--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
 		<title>Assignment 5</title>
 		<!-- This is my jQuery Library -->
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-		
+		<!-- This library is for my Google Visualization -->
+		<script type="text/javascript" src="https://www.google.com/jsapi"></script>
+		<!-- This is the scripts file I created -->
+		<script src="scripts.js" type="text/javascript"></script>
 	</head>
 	<body>
 		<h1>Sample Google Visualization</h1>
-		
+		<div id = "newChartDiv"></div>
 	</body>
 </html>
 
